# HAKI

./: .gitignore  README.md  build3.txt  build_output.txt  test_output.txt
Core/: README.md  haki_core_service.py  pyproject.toml  requirements.txt
Core/core/: __init__.py
Core/core/clock/: __init__.py  clock.py
Core/core/dialogue/: __init__.py  dialogue_manager.py
Core/core/execution/: __init__.py  execution_engine.py  safety_gate.py
Core/core/ipc/: __init__.py  server.py
Core/core/ipc/proto/: __init__.py  haki_ipc_pb2.py  haki_ipc_pb2_grpc.py
Core/core/language/: __init__.py  language_engine.py
Core/core/learning/: __init__.py  learning_engine.py
Core/core/memory/: __init__.py  chunker.py  indexer.py  memory_brain.py  models.py  serializer.py  store_result.py  vault.py
Core/core/model_provider/: __init__.py  model_provider.py
Core/core/mood/: __init__.py  mood_detector.py
Core/core/orchestrator/: __init__.py  intent_router.py  orchestrator.py
Core/core/persona/: __init__.py  persona_engine.py
Core/core/planner/: __init__.py  planner.py
Core/tests/: conftest.py  test_clock.py  test_ipc_smoke.py  test_language_engine.py  test_memory_deletion_export_privacy.py  test_memory_indexer.py  test_memory_retrieval.py  test_memory_vault.py  test_model_provider.py  test_model_provider_backends.py  test_mood_detector.py  test_note_serializer.py  test_orchestrator_memory_integration.py  test_persona_engine.py  test_planner.py  test_safety_gate.py  test_smoke.py
Core/tests/learning/: test_learning_engine.py
HAKI/: Package.resolved  Package.swift  (+2 more)
(+40 files in other folders)
